[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Font3.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=3]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Logo.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="TextureRect"]
position = Vector2( 250, 160 )
scale = Vector2( 1.8, 0.8 )
texture = ExtResource( 3 )
color = Color( 0.784314, 0.784314, 1, 1 )
energy = 3.0

[node name="Light2D2" type="Light2D" parent="TextureRect"]
position = Vector2( 545, 160 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 1 )
energy = 5.0

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 300, 250 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
material = SubResource( 1 )
margin_right = 600.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 130 )
texture = ExtResource( 6 )
stretch_mode = 1

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 150.0
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 250 )
custom_constants/separation = 10
alignment = 1

[node name="FullscreenCheckbox" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 10.0
margin_right = 600.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 50 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/Buttons/FullscreenCheckbox"]
margin_left = 199.0
margin_top = 15.0
margin_right = 332.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "FULLSCREEN"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="Menu/Buttons/FullscreenCheckbox"]
margin_left = 352.0
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 40 )

[node name="LangSelect" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 70.0
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 50 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/Buttons/LangSelect"]
margin_left = 113.0
margin_top = 15.0
margin_right = 166.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "LANG"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="Menu/Buttons/LangSelect"]
margin_left = 186.0
margin_right = 486.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="SFXVolume" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 130.0
margin_right = 600.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 50 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/Buttons/SFXVolume"]
margin_left = 108.0
margin_top = 15.0
margin_right = 172.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "SFX_V"

[node name="SFXSlider" type="HSlider" parent="Menu/Buttons/SFXVolume"]
margin_left = 192.0
margin_right = 492.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 0.0
tick_count = 10
ticks_on_borders = true

[node name="OSTVolume" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 190.0
margin_right = 600.0
margin_bottom = 240.0
rect_min_size = Vector2( 600, 50 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/Buttons/OSTVolume"]
margin_left = 107.0
margin_top = 15.0
margin_right = 173.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "OST_V"

[node name="OSTSlider" type="HSlider" parent="Menu/Buttons/OSTVolume"]
margin_left = 193.0
margin_right = 493.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = -80.0
max_value = 0.0
tick_count = 10
ticks_on_borders = true

[node name="Back" type="Button" parent="Menu"]
margin_top = 420.0
margin_right = 600.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 80 )
flat = true

[node name="Label" type="Label" parent="Menu/Back"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_min_size = Vector2( 200, 20 )
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Back"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 3 )
energy = 0.0
range_layer_max = 512

[node name="BackA" type="AnimationPlayer" parent="Menu"]
anims/BackIn = SubResource( 3 )
anims/BackOut = SubResource( 4 )

[node name="Fade" parent="." instance=ExtResource( 1 )]
mouse_filter = 2
[connection signal="toggled" from="Menu/Buttons/FullscreenCheckbox/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="item_selected" from="Menu/Buttons/LangSelect/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Menu/Buttons/SFXVolume/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="Menu/Buttons/OSTVolume/OSTSlider" to="." method="_on_OSTSlider_value_changed"]
[connection signal="mouse_entered" from="Menu/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Menu/Back" to="." method="_on_Back_pressed"]
